...
    <string name="coleccion">Colección</string>
    <string name="mazo">Mazo</string>
    <string name="tienda">Tienda</string>


    <string name="action_search">Buscar</string>
    <string name="action_settings">Ajustes</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
...
    <string name="login_failed">"Login failed"</string>
    <string name="textoBienvenidaRegistro">¡ADÉNTRATE EN EL UNIVERSO MARVEL!</string>
    <string name="textoBienvenidaRegistro2">¿A QUÉ ESPERAS?</string>
    <string name="IntroducirPassword">Introduce tu contraseña</string>
    <string name="IntroducirPasswordRepetida">Vuelve a introducir la contraseña</string>
    <string name="IntroducirEmail">Introduce tu email</string>
    <string name="botonRegistro">¡REGISTRATE!</string>
    <string name="IntroducirNombre">Introduce tu nombre de usuario</string>
    <string name="DescripcionLogoRegistroMarvel">Logo de registro marvel</string>
    <string name="tituloLogin">¡BIENVENIDO DE NUEVO!</string>
    <string name="descripcionFotoLogin">foto de Marvel</string>
    <string name="Recuerdame">Recordar datos de inicio de sesión</string>
    <string name="CrearCuentaLogin">¿No tienes cuenta? ¡Regístrate!</string>
    <string name="botonLogin">Iniciar sesión</string>


    <string name="Descripcion_Sobre2">Abre y consigue...\n¡3 SUPERHÉROES!</string>
    <string name="Descripción_Sobre1">Abre y consigue...\n¡1 SUPERHÉROES!</string>
    <string name="Moneda_Sobre1">10</string>
...
