<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tituloLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/alata"
        android:text="@string/tituloLogin"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/fotoLogin"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="60dp"
        app:cardCornerRadius="72dp"
        app:cardElevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloLogin">

        <ImageView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/descripcionFotoLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tituloLogin"
            app:srcCompat="@drawable/logomarvel" />
    </androidx.cardview.widget.CardView>


    <EditText
        android:id="@+id/emailLogin"
        android:layout_width="275dp"
        android:layout_height="51dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/IntroducirEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fotoLogin"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/passwordLogin"
        android:layout_width="277dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/IntroducirPassword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailLogin"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/botonInicio"
        android:layout_width="267dp"
        android:layout_height="60dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="72dp"
        android:background="@drawable/boton_registro"
        android:backgroundTint="#BF0000"
        android:text="@string/botonLogin"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLogin"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/crearCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/CrearCuentaLogin"
        android:textColor="#3F51B5"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonInicio" />
</androidx.constraintlayout.widget.ConstraintLayout>